code review and bug fixes